# python-demo

./: README.md  document.txt  pyproject.toml
app/chat/: pdf_rag.py  rag_chat.py
app/extraction/: textract.py  unstructured.py  upload.py
app/ingestion/: canopy.py  chunking.py
app/retrieval/: local_store.py
scripts/: create_testset.py
tests/: run_eval.py
